[package]
name = "cuda-mesh"
version = "0.1.0"
edition = "2021"
description = "Service mesh — discovery, load balancing, health checking"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-mesh"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }
